added recommendation-2 notebook

--- a/index.html
+++ b/index.html
@@ -77,13 +77,13 @@
             </nav>
         </div>
     </header>
-    <section id="showcase">
+    <header class="header">
         <div class="container">
             <h1>Welcome to My Data Projects</h1>
             <p>Explore my portfolio showcasing various data projects.</p>
         </div>
-    </section>
-    <section class="container">
+    </header>
+    <section class="container" id="projects">
         <div class="project" id="movie-recommendation">
             <h2>Movie Recommendation System</h2>
             <img src="images/movie-recommendation.png" alt="Movie Recommendation System">
